--- a/ui/login.ui
+++ b/ui/login.ui
@@ -143,7 +143,7 @@ QLabel{
        <string>Correo</string>
       </property>
      </widget>
-     <widget class="QPushButton" name="button_login_iniciar">
+     <widget class="QPushButton" name="button_login">
       <property name="geometry">
        <rect>
         <x>80</x>
