--- a/ui/diseno_profesor.ui
+++ b/ui/diseno_profesor.ui
@@ -105,7 +105,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>500</y>
+        <y>560</y>
         <width>71</width>
         <height>71</height>
        </rect>
@@ -145,7 +145,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>150</y>
+        <y>160</y>
         <width>71</width>
         <height>20</height>
        </rect>
@@ -163,7 +163,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>18</x>
-        <y>239</y>
+        <y>261</y>
         <width>101</width>
         <height>48</height>
        </rect>
@@ -201,7 +201,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>18</x>
-        <y>341</y>
+        <y>363</y>
         <width>101</width>
         <height>48</height>
        </rect>
@@ -241,7 +241,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>188</y>
+        <y>210</y>
         <width>109</width>
         <height>48</height>
        </rect>
@@ -279,7 +279,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>18</x>
-        <y>290</y>
+        <y>312</y>
         <width>101</width>
         <height>48</height>
        </rect>
@@ -317,7 +317,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>18</x>
-        <y>390</y>
+        <y>412</y>
         <width>101</width>
         <height>48</height>
        </rect>
@@ -357,7 +357,7 @@ QLabel{
       <property name="geometry">
        <rect>
         <x>10</x>
-        <y>440</y>
+        <y>462</y>
         <width>121</width>
         <height>48</height>
        </rect>
@@ -785,14 +785,29 @@ QPushButton{
              <string notr="true"/>
             </property>
             <widget class="QWidget" name="materia_profesor">
-             <widget class="QTableWidget" name="tableWidget">
+             <widget class="QTableWidget" name="table_temas">
               <property name="geometry">
                <rect>
-                <x>20</x>
-                <y>40</y>
-                <width>831</width>
-                <height>401</height>
+                <x>220</x>
+                <y>100</y>
+                <width>261</width>
+                <height>481</height>
                </rect>
+              </property>
+              <property name="lineWidth">
+               <number>1</number>
+              </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+              </property>
+              <property name="showGrid">
+               <bool>false</bool>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
+              </property>
+              <property name="cornerButtonEnabled">
+               <bool>true</bool>
               </property>
               <row>
                <property name="text">
@@ -801,12 +816,12 @@ QPushButton{
               </row>
               <column>
                <property name="text">
-                <string>column 1</string>
+                <string>Código</string>
                </property>
               </column>
               <column>
                <property name="text">
-                <string>column 2</string>
+                <string>Nombre</string>
                </property>
               </column>
               <item row="0" column="1">
@@ -822,25 +837,12 @@ QPushButton{
                </property>
               </item>
              </widget>
-             <widget class="QPushButton" name="materia">
+             <widget class="QLabel" name="label_materias_title">
               <property name="geometry">
                <rect>
-                <x>270</x>
-                <y>70</y>
-                <width>75</width>
-                <height>23</height>
-               </rect>
-              </property>
-              <property name="text">
-               <string>Ingresar</string>
-              </property>
-             </widget>
-             <widget class="QLabel" name="label_teoria_title_2">
-              <property name="geometry">
-               <rect>
-                <x>320</x>
+                <x>250</x>
                 <y>10</y>
-                <width>75</width>
+                <width>200</width>
                 <height>32</height>
                </rect>
               </property>
@@ -852,15 +854,139 @@ QPushButton{
               </property>
               <property name="styleSheet">
                <string notr="true">QLabel{
-	qproperty-geometry: rect(320 10 75 32);
+	qproperty-geometry: rect(250 10 200 32);
 }</string>
               </property>
               <property name="text">
                <string>Gestión de Materias</string>
               </property>
              </widget>
+             <widget class="QLineEdit" name="input_materias_search">
+              <property name="geometry">
+               <rect>
+                <x>210</x>
+                <y>70</y>
+                <width>281</width>
+                <height>20</height>
+               </rect>
+              </property>
+             </widget>
+             <widget class="QPushButton" name="button_materias_ver_materia">
+              <property name="geometry">
+               <rect>
+                <x>280</x>
+                <y>600</y>
+                <width>141</width>
+                <height>23</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Ver Sesiones de Materia</string>
+              </property>
+             </widget>
             </widget>
             <widget class="QWidget" name="sesiones_profesor">
+             <widget class="QLineEdit" name="input_sesiones_search">
+              <property name="geometry">
+               <rect>
+                <x>220</x>
+                <y>70</y>
+                <width>281</width>
+                <height>20</height>
+               </rect>
+              </property>
+             </widget>
+             <widget class="QLabel" name="label_sesiones_title">
+              <property name="geometry">
+               <rect>
+                <x>250</x>
+                <y>10</y>
+                <width>200</width>
+                <height>32</height>
+               </rect>
+              </property>
+              <property name="font">
+               <font>
+                <family>Inter</family>
+                <pointsize>16</pointsize>
+               </font>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">QLabel{
+	qproperty-geometry: rect(250 10 200 32);
+}</string>
+              </property>
+              <property name="text">
+               <string>Gestión de Sesiones</string>
+              </property>
+             </widget>
+             <widget class="QTableWidget" name="table_sesiones">
+              <property name="geometry">
+               <rect>
+                <x>230</x>
+                <y>100</y>
+                <width>261</width>
+                <height>481</height>
+               </rect>
+              </property>
+              <property name="lineWidth">
+               <number>1</number>
+              </property>
+              <property name="editTriggers">
+               <set>QAbstractItemView::AnyKeyPressed|QAbstractItemView::DoubleClicked|QAbstractItemView::EditKeyPressed|QAbstractItemView::SelectedClicked</set>
+              </property>
+              <property name="showGrid">
+               <bool>false</bool>
+              </property>
+              <property name="wordWrap">
+               <bool>true</bool>
+              </property>
+              <property name="cornerButtonEnabled">
+               <bool>true</bool>
+              </property>
+              <row>
+               <property name="text">
+                <string>row 1</string>
+               </property>
+              </row>
+              <column>
+               <property name="text">
+                <string>Código</string>
+               </property>
+              </column>
+              <column>
+               <property name="text">
+                <string>Nombre</string>
+               </property>
+              </column>
+              <item row="0" column="1">
+               <property name="text">
+                <string/>
+               </property>
+               <property name="icon">
+                <iconset>
+                 <normaloff>../src/icons/icon_quiz.png</normaloff>../src/icons/icon_quiz.png</iconset>
+               </property>
+               <property name="flags">
+                <set>ItemIsSelectable|ItemIsDragEnabled|ItemIsUserCheckable</set>
+               </property>
+              </item>
+             </widget>
+             <widget class="QPushButton" name="button_materias_ver_materia_2">
+              <property name="geometry">
+               <rect>
+                <x>320</x>
+                <y>600</y>
+                <width>75</width>
+                <height>23</height>
+               </rect>
+              </property>
+              <property name="text">
+               <string>Ver Materia</string>
+              </property>
+             </widget>
+            </widget>
+            <widget class="QWidget" name="actividades_profesor">
              <property name="styleSheet">
               <string notr="true">QFrame{
 	qproperty-geometry: rect(20 40 160 184);
